# MagicEngine

./: CMakeLists.txt  README.md  main.cpp
Assets/glsl/: cube.frag  cube.vert  food.frag  food.vert  fragment.glsl  map.frag  map.vert  point.frag  point.vert  vertex.glsl
Engine/Framework/: application.cpp  application.h  camera.cpp  camera.h  colorvalue.cpp  colour_value.cpp  colour_value.h  common.cpp  common.h  entity.cpp  entity.h  fragment_shader.cpp  fragment_shader.h  game_mode.cpp  game_mode.h  gl_render_system.cpp  gl_render_system.h  gpu_program.cpp  gpu_program.h  log.cpp  log.h  log_manager.cpp  log_manager.h  magic_platform.h  manual_object.cpp  manual_object.h  movable_object.cpp  movable_object.h  node.cpp  node.h  object.cpp  object.h  panel.cpp  panel.h  queued_renderable_collection.cpp  queued_renderable_collection.h  render_operation.cpp  render_operation.h  render_priority_group.cpp  render_priority_group.h  (+40 more)
Engine/Framework/Camera/: camera.cpp  camera.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h
Engine/Framework/RenderSystem/: gl_render_system.cpp  gl_render_system.h  render_system.cpp  render_system.h
Engine/Framework/Renders/: panel_render.cpp  panel_render.h  render.cpp  render.h
Engine/Plugin/RenderSystem/GL/: gl_render_system.cpp  gl_render_system.h  glcontext.cpp  glcontext.h  glew_window.cpp  glew_window.h
Engine/Plugin/RenderSystem/Shaders/: commonFragment.glsl  commonVertex.glsl
Engine/Shaders/: commonVertex.glsl
Engine/ThridParty/rapidjson/internal/: regex.h
Game/: Cube.cpp  Cube.h  Square.cpp  Square.h  application.cpp  application.h  cube_game_mode.cpp  cube_game_mode.h  main.cpp
Game/config/: default.json
Game/cube/: cube.cpp  cube.h  cube_camera.cpp  cube_camera.h  cube_game_model.cpp  cube_game_model.h  cube_main.cpp
Game/snake/: GameModel.cpp  GameModel.h  food.cpp  food.h  food_manager.cpp  food_manager.h  map.cpp  map.h  snake.cpp  snake.h  snake_main.cpp  snake_utils.cpp  snake_utils.h
test/: FragmentShader.cpp  FragmentShader.h  GPUProgram.cpp  GPUProgram.h  Shader.cpp  Shader.h  VertexShader.cpp  VertexShader.h  test.cpp  testPBO.cpp  test_fbo.cpp
